# light-devops-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  MCP_README.md  Procfile  README.md  docker-compose.yml  mcp_http_server.py  mcp_http_server_backup.py  mcp_http_server_refactored.py  mcp_server.py  pyproject.toml  render.yaml  requirements.txt  test_mcp_client.py  test_mcp_web_client.html
app/: config.py  dependencies.py  main.py
app/api/v1/: auth.py  deploy.py  health.py  logs.py  metrics.py  rollback.py
app/core/: config.py
app/domain/entities/: deployment.py  log_aggregation.py  log_entry.py  metric.py  metrics_aggregation.py  rollback.py
app/domain/services/: deploy_service.py  log_service.py  mcp_service.py  metrics_service.py  rollback_service.py
app/infrastructure/auth/: descope_client.py
app/infrastructure/cequence/: __init__.py  cequence_client.py
app/infrastructure/cicd/: cicd_client.py
app/infrastructure/datadog/: __init__.py  base_client.py  logs_client.py  metrics_client.py
app/infrastructure/gateway/: __init__.py  cequence_router.py  direct_router.py  gateway_router.py  router_factory.py
app/infrastructure/logs/: datadog_logs_client.py  logs_client.py
app/infrastructure/metrics/: datadog_metrics_client.py  metrics_client.py
app/middleware/: __init__.py  error_handling.py  gateway_routing.py  logging.py  request_validation.py
app/routes/: __init__.py  health.py  resources.py  tools.py
app/schemas/: auth.py  deploy.py  logs.py  rollback.py
app/utils/: __init__.py  dummy_data.py  scope_checker.py
(+5 files in other folders)
