[project]
name = "devops-mcp-server"
version = "0.1.0"
description = "Autonomous DevOps MCP server with Descope + Cequence integration"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx[http2]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "descope",
    "loguru",
    "pytest",
    "pytest-asyncio",
    "mcp",
    "structlog",
    "tenacity",
    "aiofiles"
]

[project.optional-dependencies]
dev = [
    "black", 
    "isort", 
    "mypy",
    "ruff",
    "pre-commit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
